[2017-07-04 10:17:47 +0200]  Remove unused deepin packages (experimental)                               karasu      {20d41f4d}
[2017-07-04 10:16:49 +0200]  Remove unused deepin packages (experimental)                               karasu      {b1e4528e}
[2017-06-25 11:26:52 +0200]  Use -f (fast) when formating NTFS. Fixes #769                              karasu      {71849d4e}
[2017-06-25 09:40:18 +0200]  Add deepin desktop (only in experimental)                                  karasu      {066f56f5}
[2017-06-25 08:53:35 +0200]  Install intel-ucode                                                        karasu      {56c604b5}
[2017-06-20 09:03:34 -0500]  Fix weak salt provided to crypt.crypt() method which creates user a..  Dustin Falgout  {b59b0687}
[2017-06-20 08:56:39 -0500]  Fix weak salt provided to crypt.crypt() method which creates user a..  Dustin Falgout  {73fbe5ae}
[2017-06-20 08:48:39 -0500]  Update deps (not important)                                            Dustin Falgout  {6fc1cfcc}
[2017-06-11 19:25:03 +0200]  Added deepin desktop (experimental)                                        karasu      {83227d33}
[2017-06-11 19:24:04 +0200]  Modified packages.xml                                                      karasu      {0fb671fe}
[2017-06-04 18:14:10 +0200]  Added deepin packages (experimental, won't show to users)                  karasu      {f050b094}
[2017-05-27 18:15:22 +0200]  Added option in ask screen to show Antergos wiki article about dual..      karasu      {2dc27d48}
[2017-05-27 14:10:41 +0200]  Update copyright notice (2017)                                             karasu      {a7ad748a}
[2017-05-24 17:58:20 +0200]  Update packages.xml with the new sshd feature                              karasu      {fde8f8c1}
[2017-05-24 17:57:08 +0200]  Added sshd feature                                                         karasu      {cdb19434}