@@ -13,8 +13,8 @@ This is the latest, unreleased version of Cnchi, AKA: **Cnchi Next**.
 |Development Stage|Branch|Version| Code Status|
 ----------------- | -------------- | -------------- | -------- |
 |*Cnchi Legacy*|*0.12.x*|*v0.12.46*|*Frozen*|
-|Cnchi Stable|[0.14.x](https://github.com/Antergos/Cnchi/tree/0.14.x)|vvvvvvv0.14.289|Bug Fixes Only|
-|**Cnchi Next**|**master**|**v0.15.283**|**Active Development**|
+|Cnchi Stable|[0.14.x](https://github.com/Antergos/Cnchi/tree/0.14.x)|vvvvvvv0.14.293|Bug Fixes Only|
+|**Cnchi Next**|**master**|**v0.15.284**|**Active Development**|
 
 
 ## Usage:
