@@ -536,11 +536,12 @@
                <pkgname>deepin-calendar</pkgname>
                <pkgname>deepin-control-center</pkgname>
                <pkgname>deepin-daemon</pkgname>
-               <pkgname>deepin-desktop</pkgname>
+               <!--<pkgname>deepin-desktop</pkgname>-->
                <pkgname>deepin-desktop-base</pkgname>
                <pkgname>deepin-desktop-schemas</pkgname>
                <pkgname>deepin-dock</pkgname>
                <pkgname>deepin-file-manager</pkgname>
+               <pkgname>deepin-grub2-themes</pkgname>
                <pkgname>deepin-gtk-theme</pkgname>
                <pkgname>deepin-image-viewer</pkgname>
                <pkgname>deepin-launcher</pkgname>
@@ -555,13 +556,15 @@
                <pkgname>deepin-wm-switcher</pkgname>
                <pkgname>deepin-screenshot</pkgname>
                <pkgname>deepin-screen-recorder</pkgname>
+               <pkgname>deepin-system-monitor</pkgname>
                <pkgname>deepin-terminal</pkgname>
                <pkgname>deepin-voice-recorder</pkgname>
                <pkgname>deepin-music</pkgname>
                <pkgname>deepin-cogl</pkgname>
-               <pkgname>deepin-dbus-factory</pkgname>
+               <!--<pkgname>deepin-dbus-factory</pkgname>-->
                <pkgname>deepin-movie</pkgname>
                <pkgname>deepin-mutter</pkgname>
+               <pkgname>gnome-software</pkgname>
                <pkgname nm='true' name='NetworkManager'>network-manager-applet</pkgname>
                <pkgname>startdde</pkgname>
            </packages>
